tests/baselines/reference/recursiveReverseMappedType.errors.txt
tests/cases/compiler/recursiveReverseMappedType.ts(12,37): error TS2321: Excessive stack depth comparing types 'Recur<?>' and 'Recur<?>'.


==== tests/cases/compiler/recursiveReverseMappedType.ts (1 errors) ====
    // Repro from #38198
    
    type Recur<T> = (
        T extends (unknown[]) ? {} : { [K in keyof T]?: Recur<T[K]> }
    ) | ['marker', ...Recur<T>[]];
    
    function join<T>(l: Recur<T>[]): Recur<T> {
        return ['marker', ...l];
    }
    
    function a<T>(l: Recur<T>[]): void {
        const x: Recur<T> | undefined = join(l);
                                        ~~~~~~~
!!! error TS2321: Excessive stack depth comparing types 'Recur<?>' and 'Recur<?>'.
    }
    